--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-google-map": "^3.1.1",
+    "react-google-maps": "^9.4.5",
+    "react-google-maps-loader": "^4.2.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "styled-components": "^4.1.3"
