--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+
 /.pnp
 .pnp.js
 
@@ -13,6 +14,7 @@
 
 # misc
 
+.google.js
 .DS_Store
 .env.local
 .env.development.local
@@ -23,3 +25,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .directory
+
