--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "google-maps-react": "^2.0.2",
+    "pure-react-carousel": "^1.19.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-google-map": "^3.1.1",
     "react-google-maps": "^9.4.5",
     "react-google-maps-loader": "^4.2.5",
+    "react-phone-number-input": "^2.3.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "styled-components": "^4.1.3"
